--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.0",
+    "flow-bin": "^0.223.3",
     "inliner": "https://github.com/shnizzedy/inliner.git",
     "jest": "^25.1.0",
     "jetifier": "^1.6.5",
