--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -20,4 +20,5 @@
 android.bundle.enableUncompressedNativeLibs=true
 android.useAndroidX=true
 android.enableJetifier=true
-org.gradle.jvmargs=-XX\:MaxHeapSize\=1024m -Xmx1024m
+# org.gradle.jvmargs=-XX\:MaxHeapSize\=1024m -Xmx1024m --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
+org.gradle.jvmargs=-XX\:MaxHeapSize\=1024m -Xmx1536M --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
